public/css/contest.css: fix the bug of overflow public/css/main.css: add the style of discuss discuss.index: add some link and change style discuss.list: change style

--- a/public/css/contest.css
+++ b/public/css/contest.css
@@ -3,7 +3,6 @@
     width:700px;
     margin:0 auto;
     table-layout: fixed;
-    overflow: hidden;
 }
 
 #contest_id{
